--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ crate-type = ["cdylib"]
 
 
 [dependencies]
+clap = { version = "4.5.9", features = ["derive", "cargo"] }
 pyo3 = { version = "0.20", features = ["extension-module"] }
