--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ crate-type = ["cdylib"]
 [dependencies]
 clap = { version = "4.5.9", features = ["derive", "cargo"] }
 pyo3 = { version = "0.20", features = ["extension-module"] }
+lettre = { version = "0.11", features = ["builder"] }
