--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,22 @@
 [package]
-name = "spcs_cli"
+name = "spcs_rust_utils"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[lib]
-name = "spcs_cli"
-crate-type = ["cdylib"]
 
+[lib]
+name = "spcs_rust_utils"
+crate-type = ["cdylib", "rlib"]
+
+[dependencies.pyo3]
+version = "0.22.0"
+
+[features]
+extension-module = ["pyo3/extension-module"]
+default = ["extension-module"]
 
 [dependencies]
 clap = { version = "4.5.9", features = ["derive", "cargo"] }
-pyo3 = { version = "0.20", features = ["extension-module"] }
 lettre = { version = "0.11", features = ["builder"] }
+toml = "0.5"
+serde = { version = "1.0", features = ["derive"] }
