--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ default = ["extension-module"]
 clap = { version = "4.5.9", features = ["derive", "cargo"] }
 lettre = { version = "0.11", features = ["builder"] }
 toml = "0.5"
+time = { version = "0.3", features = ["macros", "formatting"] }
 serde = { version = "1.0", features = ["derive"] }
