--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "spcs_rust_utils"
-version = "0.1.0"
+name = "pyfex"
+version = "0.2.0"
 edition = "2021"
 
 
@@ -19,5 +19,6 @@ default = ["extension-module"]
 clap = { version = "4.5.9", features = ["derive", "cargo"] }
 lettre = { version = "0.11", features = ["builder"] }
 toml = "0.5"
-time = { version = "0.3", features = ["macros", "formatting"] }
+time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
