--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,8 @@ toml = "0.5"
 time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+
+[dev-dependencies]
+regex = "1"
+tempfile = "3.3"
