--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ toml = "0.5"
 time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.41.1", features = ["full"] }
+log = "0.4.22"
+env_logger = "0.11.5"
+crossbeam = "0.8.4"
 
 
 [dev-dependencies]
