--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
-name = "rex"
+name = "rex-py"
 version = "0.9"
-
+description = "Rex, a rust based data management tool"
+authors = [
+    { name = "Jamin Martin"}
+]
 requires-python = ">=3.12"
 [build-system]
 requires = ["maturin>=1.7,<2.0"]
@@ -10,3 +13,4 @@ build-backend = "maturin"
 [tool.maturin]
 features = ["pyo3/extension-module"]
 module-name = "rex"
+manifest-path = "core/Cargo.toml"
