--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -139,8 +139,8 @@ jobs:
           !contains(github.ref, '-rc')
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        run: twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
       
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
