--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,5 @@ requires = ["maturin>=1.7,<2.0"]
 build-backend = "maturin"
 
 [tool.maturin]
-features = ["pyo3/extension-module"]
+features = ["extension-module"]
 module-name = "rex"
