--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -20,7 +20,7 @@ default = []
 clap = { version = "4.5.9", features = ["derive", "cargo"] }
 lettre = { version = "0.11", features = ["builder"] }
 toml = "0.8.19"
-time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
+time = { version = "0.3", features = ["macros", "formatting", "local-offset", "parsing"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.41.1", features = ["full"] }
@@ -32,6 +32,8 @@ crossterm = "0.28.1"
 tui-logger = {version = "0.14.0", features = ["crossterm"]}
 itertools = "0.13.0"
 dirs = "6.0.0"
+clickhouse = {version = "0.11", features = ["uuid"]}
+uuid = { version = "1", features = ["v4", "serde"] }
 
 [dev-dependencies]
 regex = "1"
