--- a/db-support/rex-docker/docker-compose.yml
+++ b/db-support/rex-docker/docker-compose.yml
@@ -13,12 +13,20 @@ services:
       - clickhouse_data:/var/lib/clickhouse
       - clickhouse_logs:/var/log/clickhouse-server
     ports:
-      - "8123:8123"  # HTTP interface
-      - "9000:9000"  # Native TCP interface
+      - "8123:8123" # HTTP interface
+      - "9000:9000" # Native TCP interface
     networks:
       - monitoring
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8123/ping"]
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:8123/ping",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -35,7 +43,7 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_USERS_DEFAULT_THEME=dark
     ports:
-      - '3000:3000'
+      - "3000:3000"
     volumes:
       - grafana_data:/var/lib/grafana
       - grafana_logs:/var/log/grafana
@@ -45,7 +53,11 @@ services:
       clickhouse:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
