--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,17 +10,22 @@ path = "src/lib.rs"
 
 [dependencies.pyo3]
 version = "0.22.0"
-optional = true  
+optional = true
 
 [features]
 extension-module = ["pyo3/extension-module"]
-default = [] 
+default = []
 
 [dependencies]
 clap = { version = "4.5.9", features = ["derive", "cargo"] }
 lettre = { version = "0.11", features = ["builder"] }
 toml = "0.8.19"
-time = { version = "0.3", features = ["macros", "formatting", "local-offset", "parsing"] }
+time = { version = "0.3", features = [
+    "macros",
+    "formatting",
+    "local-offset",
+    "parsing",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.41.1", features = ["full"] }
@@ -29,10 +34,10 @@ env_logger = "0.11.5"
 crossbeam = "0.8.4"
 ratatui = "0.29.0"
 crossterm = "0.28.1"
-tui-logger = {version = "0.14.0", features = ["crossterm"]}
+tui-logger = { version = "0.14.0", features = ["crossterm"] }
 itertools = "0.13.0"
 dirs = "6.0.0"
-clickhouse = {version = "0.13.2", features = ["uuid"]}
+clickhouse = { version = "0.13.2", features = ["uuid", "time"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 
 [dev-dependencies]
