--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rex-core"
 edition = "2021"
-version = "0.9.4"
+version = "0.9.5"
 
 [lib]
 name = "rex_core"
@@ -17,28 +17,23 @@ extension-module = ["pyo3/extension-module"]
 default = []
 
 [dependencies]
-clap = { version = "4.5.9", features = ["derive", "cargo"] }
-lettre = { version = "0.11", features = ["builder"] }
-toml = "0.8.19"
-time = { version = "0.3", features = [
-    "macros",
-    "formatting",
-    "local-offset",
-    "parsing",
-] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-tokio = { version = "1.41.1", features = ["full"] }
-log = "0.4.22"
-env_logger = "0.11.5"
-crossbeam = "0.8.4"
-ratatui = "0.29.0"
-crossterm = "0.28.1"
-tui-logger = { version = "0.14.0", features = ["crossterm"] }
-itertools = "0.13.0"
-dirs = "6.0.0"
-clickhouse = { version = "0.13.2", features = ["uuid", "time"] }
-uuid = { version = "1", features = ["v4", "serde"] }
+clap = { workspace = true }
+lettre = { workspace = true }
+toml = { workspace = true }
+time = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true }
+log = { workspace = true }
+env_logger = { workspace = true }
+crossbeam = { workspace = true }
+ratatui = { workspace = true }
+crossterm = { workspace = true }
+tui-logger = { workspace = true }
+itertools = { workspace = true }
+dirs = { workspace = true }
+clickhouse = { workspace = true }
+uuid = { workspace = true }
 
 [dev-dependencies]
 regex = "1"
