feat!: added server support, metadata logging

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.9.5"
 rex-core = { path = "../core", default-features = false }
 tokio = { workspace = true }
 clap = { workspace = true }
+uuid = { workspace = true }
 [[bin]]
 name = "rex"
 path = "src/bin/main.rs"
