--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -34,7 +34,7 @@ itertools = { workspace = true }
 dirs = { workspace = true }
 clickhouse = { workspace = true }
 uuid = { workspace = true }
-
+axum = { workspace = true }
 [dev-dependencies]
 regex = "1"
 tempfile = "3.3"
