--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ itertools = "0.13.0"
 dirs = "6.0.0"
 clickhouse = { version = "0.13.2", features = ["uuid", "time"] }
 uuid = { version = "1", features = ["v4", "serde"] }
+axum = "0.8.4"
