New rust only workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,115 +1,46 @@
-name: Build rex, rex-py
+name: Rust CI
 
 on:
   push:
-    branches:
-      - devel
-
-  workflow_dispatch:
-
-permissions:
-  contents: write
+    branches: [devel]
 
 jobs:
-  linux:
-    runs-on: ${{ matrix.platform.runner }}
+  build-test:
+    name: Build and Test on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        platform:
-          - runner: ubuntu-latest
-            target: x86_64
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-      - name: Install OpenSSL dependencies (Ubuntu)
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Rust
+        uses: dtolnay/rust-toolchain@stable
+      - name: Install OpenSSL (Linux)
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libssl-dev pkg-config
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
+          sudo apt-get install -y pkg-config libssl-dev
+      - name: Cache Cargo registry
+        uses: actions/cache@v4
         with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter -m core/Cargo.toml
-          sccache: "true"
-          manylinux: auto
-          before-script-linux: |
+          path: ~/.cargo/registry
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-registry-
 
-            if command -v yum &> /dev/null; then
-              yum install -y openssl-devel
-            elif command -v apt-get &> /dev/null; then
-              apt-get update
-              apt-get install -y libssl-dev pkg-config
-            else
-              echo "Neither yum nor apt-get found. Trying to proceed without installing packages."
-            fi
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
+      - name: Cache Cargo build
+        uses: actions/cache@v4
         with:
-          name: wheels-linux-${{ matrix.platform.target }}
-          path: dist
+          path: target
+          key: ${{ runner.os }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-build-
 
-  windows:
-    runs-on: ${{ matrix.platform.runner }}
-    strategy:
-      matrix:
-        platform:
-          - runner: windows-latest
-            target: x64
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-          architecture: ${{ matrix.platform.target }}
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter -m core/Cargo.toml
-          sccache: "true"
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-windows-${{ matrix.platform.target }}
-          path: dist
+      - name: Build
+        run: cargo build --verbose
 
-  macos:
-    runs-on: ${{ matrix.platform.runner }}
-    strategy:
-      matrix:
-        platform:
-          - runner: macos-14
-            target: aarch64
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter -m core/Cargo.toml
-          sccache: "true"
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-macos-${{ matrix.platform.target }}
-          path: dist
-
-  sdist:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build sdist
-        uses: PyO3/maturin-action@v1
-        with:
-          command: sdist
-          args: --out dist
-      - name: Upload sdist
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-sdist
-          path: dist
+      - name: Run Tests
+        run: cargo test --verbose
