fixed build pipeline due to openssl...

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,15 +53,16 @@ jobs:
         platform:
           - runner: ubuntu-latest
             target: x86_64
-          - runner: ubuntu-latest
-            target: i686
-          - runner: ubuntu-latest
-            target: aarch64
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      - name: Install OpenSSL dependencies (Ubuntu)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libssl-dev pkg-config
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -69,14 +70,22 @@ jobs:
           args: --release --out dist --find-interpreter -m cli/Cargo.toml
           sccache: "true"
           manylinux: auto
+          before-script-linux: |
+
+            if command -v yum &> /dev/null; then
+              yum install -y openssl-devel
+            elif command -v apt-get &> /dev/null; then
+              apt-get update
+              apt-get install -y libssl-dev pkg-config
+            else
+              echo "Neither yum nor apt-get found. Trying to proceed without installing packages."
+            fi
 
   windows:
     runs-on: ${{ matrix.platform.runner }}
     strategy:
       matrix:
         platform:
-          - runner: windows-latest
-            target: x64
           - runner: windows-latest
             target: x86
     steps:
@@ -99,8 +108,7 @@ jobs:
         platform:
           - runner: macos-14
             target: aarch64
-          - runner: macos-13
-            target: x86_64
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
