--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,3 @@
-
-
 [build-system]
 requires = ["maturin>=1.4,<2.0"]
 build-backend = "maturin"
@@ -9,11 +7,28 @@ name = "rex-pycli"
 version = "1.0.0"
 description = "Rex CLI"
 requires-python = ">=3.13"
+readme = "README.md"
+license = {file = "LICENSE"}
+authors = [
+    {name = "Jamin Martin", email = "jamin.martin1@gmail.com"}
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Rust",
+]
+keywords = ["cli", "rex", "experiment", "automation", "testing", "DAQ", "data acquisition"]
+
+[project.urls]
+Homepage = "https://github.com/JaminMartin/rex"
+Repository = "https://github.com/JaminMartin/rex"
+Issues = "https://github.com/JaminMartin/rex/issues"
 
 [tool.maturin]
-
 module-name = "rex"
-
 manifest-path = "cli/Cargo.toml"
 
 [tool.maturin.scripts]
