--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ resolver = "2"
 members = ["core", "cli"]
 package.version = "1.0.0"
 
-
+license = "GPL-3.0-or-later"
+license-file = "LICENSE"
 [workspace.dependencies]
 clap = { version = "4.5.9", features = ["derive", "cargo"] }
 lettre = { version = "0.11", features = ["builder"] }
@@ -29,4 +30,3 @@ dirs = "6.0.0"
 clickhouse = { version = "0.13.2", features = ["uuid", "time"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 axum = "0.8.4"
-
