--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [workspace]
 resolver = "2"
-
 members = ["core", "cli"]
-package.version = "1.0.0"
 
+[workspace.package]
+version = "1.0.0"
 license = "GPL-3.0-or-later"
-license-file = "LICENSE"
+
 [workspace.dependencies]
 clap = { version = "4.5.9", features = ["derive", "cargo"] }
 lettre = { version = "0.11", features = ["builder"] }
