--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
+
 [build-system]
 requires = ["maturin>=1.4,<2.0"]
 build-backend = "maturin"
@@ -8,6 +9,7 @@ version = "1.0.0"
 description = "Rex CLI"
 requires-python = ">=3.13"
 readme = "README.md"
+license = {text = "GPL-3.0-or-later"}
 authors = [
     {name = "Jamin Martin", email = "jamin.martin1@gmail.com"}
 ]
