--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "rex-cli"
 edition = "2021"
-description = "Experimental control and data viewer for scientific workflows"
+
 publish = false
 
 version = "1.0.0"
-
+description = "Command line tool for automating data collection"
+license = "GPL-3.0-or-later"
+repository = "https://github.com/JaminMartin/rex"
+homepage = "https://github.com/JaminMartin/rex"
 [dependencies]
 rex-core = { path = "../core", default-features = false }
 tokio = { workspace = true }
@@ -14,4 +17,3 @@ uuid = { workspace = true }
 [[bin]]
 name = "rex"
 path = "src/bin/main.rs"
-
