--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,6 @@ Issues = "https://github.com/JaminMartin/rex/issues"
 [tool.maturin]
 module-name = "rex"
 manifest-path = "cli/Cargo.toml"
-
+include = ["LICENSE"]
 [tool.maturin.scripts]
 rex = "rex"
