--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,17 +119,20 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     needs: [linux, windows, macos, sdist]
     steps:
-      # Download artifacts (this can be simplified)
+      - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+
       - uses: actions/download-artifact@v4
         with:
           pattern: wheels-*
           path: dist
           merge-multiple: true
 
-      - name: Install twine
-        run: python -m pip install --upgrade twine
-
-      - name: Publish to PyPI
+      - name: Publish to PyPI with UV
         if: >-
           !contains(github.ref, '.alpha') &&
           !contains(github.ref, '-alpha') &&
@@ -138,9 +141,8 @@ jobs:
           !contains(github.ref, '.rc') &&
           !contains(github.ref, '-rc')
         env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
+          UV_PUBLISH_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        run: uv publish dist/*
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
