--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ version = "1.0.0"
 description = "Rex CLI"
 requires-python = ">=3.13"
 readme = "README.md"
+license-files = ["LICENSE"]
 authors = [
     {name = "Jamin Martin", email = "jamin.martin1@gmail.com"}
 ]
